fix: fixes low z-index on handle

--- a/src/app/producer-shelf/components/producer-shelf/producer-shelf.component.scss
+++ b/src/app/producer-shelf/components/producer-shelf/producer-shelf.component.scss
@@ -14,6 +14,7 @@
     left: 50%;
     width: 80px;
     height: 80px;
+    z-index: 1000;
 
     box-shadow: 0 0 20px #000;
     background-color: var(--background-color);
